# OCP-IT-Help-Center

./: .gitignore  README.md  main.py  pyproject.toml  replit.md  service_manager.py  setup_msi.py
.github/workflows/: build-msi.yml
src/it_agent/: __init__.py  api.py  gui.py  service.py  sysinfo.py  tray.py
